@@ -1,6 +1,10 @@
 1.7.0 - 2017-XX-XX
   1. Wire HTTP transport settings into Credential logic.
 
+  2. Fixed an issue where JSON auth files containing user auth e.g.
+     Application default credentials does not work with
+     google.cloud.auth.service.account.json.keyfile
+
 1.6.1 - 2017-04-14
 
   1. Added a polling loop when determining if a createEmptyObjects error can
